added support for pagination on getTodos and added more logs
